# react-native-nitro-frame-processor

./: .gitignore  CONTRIBUTING.md  LICENSE  NitroFrameProcessor.podspec  README.md  nitro.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle
android/CVIESDK/: COPYRIGHT.txt  READMESDK.txt
android/CVIESDK/images/: in300x390u8.raw
android/CVIESDK/include/: cvem.h  cvie.h  cvie.hpp  cvie2.h  cvie2.hpp  cvlm.h  cvlm.hpp  dynamic_library.h  dynamic_library.hpp  us2d_tp.h
android/CVIESDK/java/se/contextvision/cvie/: Cvie.java  Cvie2.java  Cvie2Error.java  Cvie2Library.java  Cvie2Result.java  CvieCreateFlag.java  CvieDataFlag.java  CvieError.java  CvieImageDescriptor.java  CvieInstance.java  CvieInstanceOption.java  CvieLibrary.java  CvieOption.java  CvieOptionInfo.java  CvieOptionType.java  CvieParameterSetting.java  CviePixelFormat.java  CvieResult.java  CvieSettingOption.java  CvieTCVIEDIInfo.java  Cvlm.java  CvlmLibrary.java
android/CVIESDK/par/: US2D-4_default.us2d4  US2D-5_default.us2d5  US2D-6_default.us2d6  US2D-8_default.us2d8  US2D-9_default.us2d9
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/nitroframeprocessor/: NitroFrameProcessor.kt  NitroFrameProcessorPackage.kt
cpp/: FrameProcessor.cpp  FrameProcessor.h  FrameProcessorUnavailable.cpp  NeedleEnhancement.cpp  NeedleEnhancement.hpp  NitroFrameProcessorCpp.cpp  NitroFrameProcessorCpp.hpp  debug.h
cpp/frame/: frame.h
cpp/needle-reference/: cmd_central.h  debug.h
cpp/needle-reference/algorithm/: needle_confidence_score.c  needle_enhancement.c  needle_enhancement.h
cpp/needle-reference/probe/: probe.h
cpp/probe/: probe.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/NitroFrameProcessorExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/NitroFrameProcessorExample.xcodeproj/: project.pbxproj
example/ios/NitroFrameProcessorExample.xcodeproj/xcshareddata/xcschemes/: NitroFrameProcessorExample.xcscheme
example/src/: App.tsx
ios/: CVIEBridge.h  CVIEBridge.mm  NitroFrameProcessor.swift
ios/CVIESDK/: COPYRIGHT.txt  READMESDK.txt
ios/CVIESDK/images/: in300x390u8_mask.raw
ios/CVIESDK/include/: cvie2.h  cvie2.hpp  us2d-7_tp.h
ios/CVIESDK/par/: US2D-7_default.us2d7
src/: NitroFrameProcessor.nitro.ts  cvie.native.tsx  cvie.tsx  index.tsx  multiply.native.tsx  needleEnhancementConfig.ts
(+2 files in other folders)
